--- a/SSK_ERP/SSK_ERP/Views/Shared/_navbar.cshtml
+++ b/SSK_ERP/SSK_ERP/Views/Shared/_navbar.cshtml
@@ -334,7 +334,7 @@
                                     <li>
                                         <a class="dropdown-item" href="@Url.Action("Index", "PurchaseReturn")"
                                            data-role="PurchaseReturnIndex" data-menugroupid="1" data-menuorder="3">
-                                            <i class="fa fa-undo"></i> Purchase Return
+                                            <i class="fa fa-undo"></i> Debit Note
                                         </a>
                                     </li>
                                 }
@@ -413,7 +413,7 @@
                                     <li>
                                         <a class="dropdown-item" href="@Url.Action("Index", "SalesReturn")"
                                            data-role="SalesReturnIndex" data-menugroupid="5" data-menuorder="3">
-                                            <i class="bi bi-repeat"></i> Sales Return
+                                            <i class="bi bi-repeat"></i> Credit Note
                                         </a>
                                     </li>
                                 }
