--- a/SSK_ERP/SSK_ERP/Views/Groups/GroupRoles.cshtml
+++ b/SSK_ERP/SSK_ERP/Views/Groups/GroupRoles.cshtml
@@ -9,9 +9,11 @@
         r.RoleName.Contains("PurchaseInvoice") || 
         r.RoleName.Contains("SalesOrder") ||
         r.RoleName.Contains("SalesInvoice") ||
+        r.RoleName.Contains("SalesEInvoice") ||
         r.RoleName.Contains("PurchaseOrder") ||
         r.RoleName.Contains("PurchaseReturn") ||
         r.RoleName.Contains("SalesReturn") ||
+        r.RoleName.Contains("CreditNoteEInvoice") ||
         r.RoleName.Contains("CreditNoteReport") ||
         r.RoleName.Contains("DebitNoteReport") ||
         r.RoleName.Contains("SMADispatchReport") ||
