in the user index crud operatins bug fixed

--- a/SSK_ERP/SSK_ERP/Views/Account/Create.cshtml
+++ b/SSK_ERP/SSK_ERP/Views/Account/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model KVM_ERP.Models.AccountViewModels.RegisterViewModel
+﻿@model SSK_ERP.Models.AccountViewModels.RegisterViewModel
 @{
     ViewBag.Title = "Add New User";
     Layout = "~/Views/Shared/_Layout.cshtml";
