in the dashboard pagination for the  transaction is fixed

--- a/SSK_ERP/SSK_ERP/Views/Account/ChangePassword.cshtml
+++ b/SSK_ERP/SSK_ERP/Views/Account/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-@model KVM_ERP.Models.AccountViewModels.ManageUserViewModel
+@model SSK_ERP.Models.AccountViewModels.ManageUserViewModel
 @{
     ViewBag.Title = "Change Password";
 }
